认证服务添加访问模式：隐式和授权码 启用ssl证书

--- a/ChuanGoing.AuthorizationServer/ChuanGoing.AuthorizationServer.csproj
+++ b/ChuanGoing.AuthorizationServer/ChuanGoing.AuthorizationServer.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Certificate\cas.clientservice.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
