--- a/ChuanGoing.AuthorizationServer/appsettings.Development.json
+++ b/ChuanGoing.AuthorizationServer/appsettings.Development.json
@@ -5,5 +5,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Certificates": {
+    "CerPath": "Certificate\\cas.clientservice.pfx",
+    "Password": "chuangoing"
+  },
+  "OnlineClient": {
+    "RedirectUris": "http://localhost:5020/signin",
+    "LogoutRedirectUris": "http://localhost:5020"
   }
 }
