--- a/ChuanGoing.AuthorizationServer/Properties/launchSettings.json
+++ b/ChuanGoing.AuthorizationServer/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "ChuanGoing.AuthorizationServer": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:6000",
+      "applicationUrl": "https://localhost:6005;http://localhost:6000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
