--- a/ChuanGoing.AuthorizationServer/ChuanGoing.AuthorizationServer.csproj
+++ b/ChuanGoing.AuthorizationServer/ChuanGoing.AuthorizationServer.csproj
@@ -6,15 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="2.5.3" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <None Remove="Certificate\cas.clientservice.pfx" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Certificate\cas.clientservice.pfx">
+    <Content Include="Certificate\cas.clientservice.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="2.5.3" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
