授权码流程

--- a/ChuanGoing.AuthorizationServer/appsettings.Development.json
+++ b/ChuanGoing.AuthorizationServer/appsettings.Development.json
@@ -11,7 +11,7 @@
     "Password": "chuangoing"
   },
   "OnlineClient": {
-    "RedirectUris": "http://localhost:5020/signin",
-    "LogoutRedirectUris": "http://localhost:5020"
+    "RedirectUris": "http://localhost:5000/Home",
+    "LogoutRedirectUris": "http://localhost:5000/Home/Live"
   }
 }
