--- a/ChuanGoing.WebOnline/appsettings.Development.json
+++ b/ChuanGoing.WebOnline/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "Authorization": {
-    "Authority": "http://localhost:6005",
+    "Authority": "https://localhost:6005",
     "RequireHttpsMetadata": false
   }
 }
